[project]
name = ""
version = ""
description = ""
authors = [
    {name = "ä¸ç‘", email = "dingrui@memect.co"},
]
dependencies = [
    "flask>=2.1.2",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
